Correct size of text on mobile

--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 50%;
+}
+
+.main-photo {
+    width: 50%;
 }
 
 img, .main-image {
